Logica principal del quiz hecha

--- a/index.html
+++ b/index.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto Quiz</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+
+    <div id="home" class="hide">
+        <h1>Página inicial</h1>
+    </div>
+
+    <div id="question">
+        <h1>Preguntas</h1>
+        <div id="pregunta"></div>
+    </div>
+
+    <div id="result" class="hide">
+        <h1>Aqui iran los resultados</h1>
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
