Estructurada de las tres paginas

--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
     </header>
 
     <main>
-        <div id="home" class="hide">
-            <h1>Página inicial</h1>
-        </div>
+        <div class="hqr-contenedor">
+            <div id="home" class="home">
+                <h1>Página inicial</h1>
+                <button class="btn  btn-primary" onclick="comenzarTest()">Comenzar Test</button>
+            </div>
 
-        <div id="question">
-            <div id="pregunta-header"></div>
-            <div id="pregunta"></div>
-        </div>
+            <div id="question" class="hide">
+                <div id="pregunta-header"></div>
+                <div id="pregunta"></div>
+            </div>
 
-        <div id="result" class="hide">
-            <h1>Aqui iran los resultados</h1>
+            <div id="result" class="hide"></div>
         </div>
     </main>
 
