--- a/index.html
+++ b/index.html
@@ -18,6 +18,47 @@
         <div class="hqr-contenedor">
             <div id="home" class="home">
                 <h1>Página inicial</h1>
+                <form class="form-quiz">
+                    <label for="cantidad"> Cantidad: </label>
+                    <input type="number" id="cantidad" name="cantidad" class="form-control" value="10" min="1" max="50">
+                    
+                    <label for="categoria">Categoría: </label>
+                    <select name="categoria" id="categoria" class="form-select">
+                        <option value="">Any type</option>
+                        <option value="9">General Knowledge</option>
+                        <option value="10">Entertainment: Books</option>
+                        <option value="11">Entertainment: Films</option>
+                        <option value="12">Entertainment: Music</option>
+                        <option value="13">Entertainment: Musical & Theatres</option>
+                        <option value="14">Entertainment: Television</option>
+                        <option value="15">Entertainment: Video Games</option>
+                        <option value="16">Entertainment: Board Games</option>
+                        <option value="17">Science & Nature</option>
+                        <option value="18">Science: Computers</option>
+                        <option value="19">Science: Mathematics</option>
+                        <option value="20">Mythology</option>
+                        <option value="21">Sports</option>
+                        <option value="22">Geography</option>
+                        <option value="23">History</option>
+                        <option value="24">Politics</option>
+                        <option value="25">Art</option>
+                        <option value="26">Celebrities</option>
+                        <option value="27">Animals</option>
+                        <option value="28">Vehicles</option>
+                        <option value="29">Entertainment: Comics</option>
+                        <option value="30">Science: Gadgets</option>
+                        <option value="31">Entertainment: Japanese Anime & Manga</option>
+                        <option value="32">Entertainment: Cartoons & Animations</option>
+                    </select>
+
+                    <label for="dificultad">Dificultad: </label>
+                    <select name="dificultad" id="dificultad" class="form-select">
+                        <option value="">Any type</option>
+                        <option value="easy">Easy</option>
+                        <option value="medium">Medium</option>
+                        <option value="hard">Hard</option>
+                    </select>
+                </form>
                 <button class="btn  btn-primary" onclick="comenzarTest()">Comenzar Test</button>
             </div>
 
@@ -34,6 +75,8 @@
 
     </footer>
 
+    
     <script src="main.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 </html>
