--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <main>
         <div class="hqr-contenedor">
             <div id="home" class="home">
-                <h1>Página inicial</h1>
+                <center><img src="./Assets/Trivia.png" width="300px" height="200px"></center>
                 <form class="form-quiz">
-                    <label for="cantidad"> Cantidad: </label>
+                    <label for="cantidad"> Number of Questions: </label>
                     <input type="number" id="cantidad" name="cantidad" class="form-control" value="10" min="1" max="50">
-                    
-                    <label for="categoria">Categoría: </label>
+                    <br>
+                    <label for="categoria">Select Category: </label>
                     <select name="categoria" id="categoria" class="form-select">
                         <option value="">Any type</option>
                         <option value="9">General Knowledge</option>
@@ -59,7 +59,7 @@
                         <option value="hard">Hard</option>
                     </select>
                 </form>
-                <button class="btn  btn-primary" onclick="comenzarTest()">Comenzar Test</button>
+                <button class="btn-comenzar" onclick="comenzarTest()">Empezar</button>
             </div>
 
             <div id="question" class="hide">
