--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     <main>
         <div class="hqr-contenedor">
             <div id="home" class="home">
-                <center><img src="./Assets/Trivia.png" width="300px" height="200px"></center>
+                <h1 class="title">Quiz</h1>
                 <form class="form-quiz">
-                    <label for="cantidad"> Number of Questions: </label>
+                    <label for="cantidad"> Number of Questions: </label><br>
                     <input type="number" id="cantidad" name="cantidad" class="form-control" value="10" min="1" max="50">
                     <br>
-                    <label for="categoria">Select Category: </label>
+                    <label for="categoria">Select Category: </label><br>
                     <select name="categoria" id="categoria" class="form-select">
                         <option value="">Any type</option>
                         <option value="9">General Knowledge</option>
@@ -51,7 +51,7 @@
                         <option value="32">Entertainment: Cartoons & Animations</option>
                     </select>
 
-                    <label for="dificultad">Dificultad: </label>
+                    <br><label for="dificultad">Dificultad: </label>
                     <select name="dificultad" id="dificultad" class="form-select">
                         <option value="">Any type</option>
                         <option value="easy">Easy</option>
