añadido un loading...

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
 
     <main>
-        <div class="hqr-contenedor">
+        <div id="contenedor-principal" class="hqr-contenedor">
             <div id="home" class="home">
                 <h1>Página inicial</h1>
                 <form class="form-quiz">
@@ -68,6 +68,14 @@
             </div>
 
             <div id="result" class="hide"></div>
+
+            <div id="loading" class="hide">
+                <div class="container-loading">
+                    <div class="spinner-border text-primary" role="status"></div>
+                    <div class="text-loading">Loading...</div>
+                </div>
+            </div>
+
         </div>
     </main>
 
