--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             <div id="home" class="home">
                 <h1 class="title">Quiz</h1>
                 <form class="form-quiz">
+                    <label for="name">Your name:</label>
+                    <input type="text" id="name" name="name" class="form-control"> <br>
                     <label for="cantidad"> Number of Questions: </label><br>
                     <select id="cantidad" name="cantidad" class="form-select">
                         <option value="10">10</option>
@@ -57,7 +59,7 @@
                         <option value="32">Entertainment: Cartoons & Animations</option>
                     </select>
 
-                    <br><label for="dificultad">Dificultad: </label>
+                    <br><label for="dificultad">Select Difficulty: </label>
                     <select name="dificultad" id="dificultad" class="form-select">
                         <option value="">Any type</option>
                         <option value="easy">Easy</option>
@@ -65,7 +67,7 @@
                         <option value="hard">Hard</option>
                     </select>
                 </form>
-                <button class="btn-comenzar" onclick="comenzarTest()">Empezar</button>
+                <button class="btn-comenzar" onclick="comenzarTest()">Start</button>
             </div>
 
             <div id="question" class="hide">
@@ -86,7 +88,16 @@
     </main>
 
     <footer>
-
+        <div class="contenedor-copyright">
+            <span class="copyright">All rights reserved by Daniela A. and Alex J.</span><span class="copyright"> Copyright © 2022</span>
+        </div>
+        <div class="contenedor-logos">
+            <img src="./assets/twitter-logo.svg" alt="Twitter logo" class="logo">
+            <img src="./assets/instagram-logo.jpg" alt="Instagram logo" class="logo">
+            <img src="./assets/linkedIn-logo.svg" alt="LinkedIn logo" class="logo">
+            <img src="./assets/youtube-logo.svg" alt="Youtube logo" class="logo">
+            <img src="./assets/github-logo.png" alt="Github logo" class="logo">
+        </div>
     </footer>
 
     
