--- a/index.html
+++ b/index.html
@@ -11,64 +11,23 @@
 </head>
 <body>
     <header>
+        <nav id="navBar">
+            <div class="logo-container">
+                <span class="logo">Logo</span>
+            </div>
 
+            <div class="links-container">
+                <span class="navBar-link" onclick="irPaginaPrincipal()">Quiz</span>
+                <span class="navBar-link" onclick="goClassification()">Classification</span>
+                <span class="navBar-link">Stats</span>
+            </div>
+        </nav>
     </header>
 
     <main>
         <div id="main" class="hqr-contenedor">
-            <div id="home" class="home">
-                <h1 class="title">Quiz</h1>
-                <form class="form-quiz">
-                    <label for="name">Your name:</label>
-                    <input type="text" id="name" name="name" class="form-control"> <br>
-                    <label for="cantidad"> Number of Questions: </label><br>
-                    <select id="cantidad" name="cantidad" class="form-select">
-                        <option value="10">10</option>
-                        <option value="20">20</option>
-                        <option value="30">30</option>
-                        <option value="40">40</option>
-                        <option value="50">50</option>
-                    </select>
-                    <br>
-                    <label for="categoria">Select Category: </label><br>
-                    <select name="categoria" id="categoria" class="form-select">
-                        <option value="">Any type</option>
-                        <option value="9">General Knowledge</option>
-                        <option value="10">Entertainment: Books</option>
-                        <option value="11">Entertainment: Films</option>
-                        <option value="12">Entertainment: Music</option>
-                        <option value="13">Entertainment: Musical & Theatres</option>
-                        <option value="14">Entertainment: Television</option>
-                        <option value="15">Entertainment: Video Games</option>
-                        <option value="16">Entertainment: Board Games</option>
-                        <option value="17">Science & Nature</option>
-                        <option value="18">Science: Computers</option>
-                        <option value="19">Science: Mathematics</option>
-                        <option value="20">Mythology</option>
-                        <option value="21">Sports</option>
-                        <option value="22">Geography</option>
-                        <option value="23">History</option>
-                        <option value="24">Politics</option>
-                        <option value="25">Art</option>
-                        <option value="26">Celebrities</option>
-                        <option value="27">Animals</option>
-                        <option value="28">Vehicles</option>
-                        <option value="29">Entertainment: Comics</option>
-                        <option value="30">Science: Gadgets</option>
-                        <option value="31">Entertainment: Japanese Anime & Manga</option>
-                        <option value="32">Entertainment: Cartoons & Animations</option>
-                    </select>
 
-                    <br><label for="dificultad">Select Difficulty: </label>
-                    <select name="dificultad" id="dificultad" class="form-select">
-                        <option value="">Any type</option>
-                        <option value="easy">Easy</option>
-                        <option value="medium">Medium</option>
-                        <option value="hard">Hard</option>
-                    </select>
-                </form>
-                <button class="btn-comenzar" onclick="comenzarTest()">Start</button>
-            </div>
+            <div id="home" class="home"></div>
 
             <div id="question" class="hide">
                 <div id="pregunta-header"></div>
@@ -76,6 +35,8 @@
             </div>
 
             <div id="result" class="hide"></div>
+
+            <div id="classification" class="hide"></div>
 
             <div id="loading" class="hide">
                 <div class="container-loading">
@@ -92,11 +53,11 @@
             <span class="copyright">All rights reserved by Daniela A. and Alex J.</span><span class="copyright"> Copyright © 2022</span>
         </div>
         <div class="contenedor-logos">
-            <img src="./assets/twitter-logo.svg" alt="Twitter logo" class="logo">
-            <img src="./assets/instagram-logo.jpg" alt="Instagram logo" class="logo">
-            <img src="./assets/linkedIn-logo.svg" alt="LinkedIn logo" class="logo">
-            <img src="./assets/youtube-logo.svg" alt="Youtube logo" class="logo">
-            <img src="./assets/github-logo.png" alt="Github logo" class="logo">
+            <img src="./assets/twitter-logo.svg" alt="Twitter logo" class="icons">
+            <img src="./assets/instagram-logo.jpg" alt="Instagram logo" class="icons">
+            <img src="./assets/linkedIn-logo.svg" alt="LinkedIn logo" class="icons">
+            <img src="./assets/youtube-logo.svg" alt="Youtube logo" class="icons">
+            <img src="./assets/github-logo.png" alt="Github logo" class="icons">
         </div>
     </footer>
 
