--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="styles.css">
+    <script defer src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
     <header>
@@ -19,7 +20,7 @@
             <div class="links-container">
                 <span class="navBar-link" onclick="irPaginaPrincipal()">Quiz</span>
                 <span class="navBar-link" onclick="goClassification()">Classification</span>
-                <span class="navBar-link">Stats</span>
+                <span class="navBar-link" onclick="goStats()">Stats</span>
             </div>
         </nav>
     </header>
@@ -37,6 +38,8 @@
             <div id="result" class="hide"></div>
 
             <div id="classification" class="hide"></div>
+
+            <div id="stats" class="hide"></div>
 
             <div id="loading" class="hide">
                 <div class="container-loading">
@@ -62,7 +65,7 @@
     </footer>
 
     
-    <script src="main.js"></script>
+    <script defer src="main.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-</body>
+    
 </html>
