se generan cambios en logo, y classification

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <nav id="navBar">
             <div class="logo-container">
-                <span class="logo">Logo</span>
+                <span class="logo">Dalex</span>
             </div>
 
             <div class="links-container">
@@ -43,8 +43,8 @@
 
             <div id="loading" class="hide">
                 <div class="container-loading">
-                    <div class="spinner-border text-primary" role="status"></div>
-                    <div class="text-loading">Loading...</div>
+                    <div class="spinner-border text-primary" role="status"></div><br><br>
+                    <div class="text-loading">...Loading...</div>
                 </div>
             </div>
 
