se modifica navbar, estilos

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </div>
 
             <div class="links-container">
-                <span class="navBar-link" onclick="irPaginaPrincipal()">Quiz</span>
-                <span class="navBar-link" onclick="goClassification()">Classification</span>
-                <span class="navBar-link" onclick="goStats()">Stats</span>
+                <button class="navBar-link" onclick="irPaginaPrincipal()"><p class="navQuiz">Quiz</p></button>
+                <button class="navBar-link" onclick="goClassification()"><p class="navClass">Classification</p></button>
+                <button class="navBar-link" onclick="goStats()"><p class="navStats">Stats</p></button>
             </div>
         </nav>
     </header>
