--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <div class="contenedor-logos">
            <a href="https://twitter.com/radikalex_"> <img src="./assets/twitter-logo.svg" alt="Twitter logo" class="icons"></a>
            <a href="https://www.instagram.com/danni.arango"><img src="./assets/instagram-logo.jpg" alt="Instagram logo" class="icons"></a>
-           <a href="https://twitter.com/radikalex_"><img src="./assets/linkedIn-logo.svg" alt="LinkedIn logo" class="icons"></a>
-           <a href="https://twitter.com/radikalex_"><img src="./assets/youtube-logo.svg" alt="Youtube logo" class="icons"></a>
+          <img src="./assets/linkedIn-logo.svg" alt="LinkedIn logo" class="icons">
+          <img src="./assets/youtube-logo.svg" alt="Youtube logo" class="icons">
            <a href="https://github.com/radikalex"><img src="./assets/github-logo.png" alt="Github logo" class="icons"></a>
         </div>
     </footer>
