--- a/index.html
+++ b/index.html
@@ -43,9 +43,13 @@
 
             <div id="loading" class="hide">
                 <div class="container-loading">
-                    <div class="spinner-border2 text-primary" role="status"></div><br><br>
+                    <div class="spinner-border2 text-primary" role="status"></div>
                     <div class="text-loading">...Loading...</div>
                 </div>
+            </div>
+
+            <div id="no-data" class="hide">
+                <span>There is no data yet. Do some quizs first!</span>
             </div>
 
         </div>
